--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <h1>Im here to Learn Tailwind CSS</h1>
-    <h3>I hope it will be fun</h3>
-    <p>Lets See</p>
+    <h1 class="text-5xl font-mono border-2 border-red-500 text-center">
+      Im here to Learn Tailwind CSS
+    </h1>
+    <h3 class="border-green-800 border-4 p-20 w-200">I hope it will be fun</h3>
+    <p class="border-3 border-red-800 bg-yellow-200">Lets See</p>
+    <p class="leading-7 text-justify font-[600]">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nulla
+      quas voluptatibus tempora id saepe accusamus nihil est aperiam tenetur.
+      Debitis, obcaecati impedit. Minima mollitia incidunt repudiandae, est esse
+      adipisci inventore praesentium nemo ipsum consequatur neque quaerat dolore
+      consequuntur cumque, nesciunt ipsam. Deleniti perspiciatis, accusamus
+      tempora doloribus ipsum unde quae!
+    </p>
   </body>
 </html>
