Added margin and padding to the section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,36 @@
       consequuntur cumque, nesciunt ipsam. Deleniti perspiciatis, accusamus
       tempora doloribus ipsum unde quae!
     </p>
+
+    <section class="border-2 border-red-200 mt-30 w-[78%] max-w-[1140px] mx-auto">
+        <!-- ml-40px mean margin left 30px -->
+         <!-- text-7xl mean text size: 4.5rem × 16px = 72px -->
+      <h1 class="border-3 font-mono text-7xl p-[1%] w-[70%] ml-[40px] text-center ">My Blog</h1>
+      <!-- leading-7 means line-height -->
+      <p class="p-[1%] text-justify font-mono leading-9 font-[600] text-[18px] ">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt velit
+        amet quod nam atque maxime ad, qui quam nihil iure odio ipsa, voluptate
+        architecto iusto neque temporibus dicta assumenda similique minus dolor
+        laudantium rem omnis sequi. Tempora eaque natus illo voluptatibus a
+        placeat quia repudiandae aperiam exercitationem explicabo architecto
+        quos, in voluptas sapiente vitae non id suscipit saepe assumenda cum,
+        earum asperiores atque veritatis. Reprehenderit, a cumque nostrum dolore
+        ullam numquam, odit assumenda necessitatibus ipsum ea nobis ex nemo
+        itaque amet accusamus iusto voluptatibus at tempore saepe? Molestias
+        cumque dicta aliquid hic deserunt consectetur odio non pariatur culpa!
+        Cum expedita perferendis earum quae vero. Veniam sapiente iste
+        repellendus, commodi dolorum quas molestiae explicabo vitae obcaecati in
+        laudantium, incidunt aliquid deleniti autem architecto. Harum non
+        dolorum, minima, dicta dolores eveniet fuga, esse dolorem doloribus
+        sequi consequuntur a sunt! Facere molestias doloremque iusto corrupti,
+        illo provident repellendus porro ullam nostrum temporibus et. Itaque
+        atque dignissimos quaerat repellat inventore adipisci officiis laborum
+        facere magnam? Quis doloremque tempora quaerat. Dolorem eius delectus
+        tenetur dignissimos exercitationem, saepe officiis assumenda excepturi
+        nulla natus blanditiis repellendus laudantium pariatur ipsum voluptate
+        reiciendis, in voluptatum quis similique repudiandae esse sequi quia.
+        Atque repellendus similique sint ratione in voluptate dolore?
+      </p>
+    </section>
   </body>
 </html>
